--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
